--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,6 @@
 @tailwind base;
+
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap");
+
 @tailwind components;
 @tailwind utilities;
