--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
     <title>.: Clebson Moura | Full Stack Developer :.</title>
     <link rel="stylesheet" href="/css/app.css" />
   </head>
@@ -66,11 +72,9 @@
       </section>
     </main>
     <section id="works" class="bg-gray-300 py-12">
-      <h2 class="text-5xl text-center font-bold">MY WORK</h2>
-      <p
-        class="text-center underline underline-offset-1 decoration-4 decoration-yellow-400 font-bold text-xl ml-14 mb-24"
-      >
+      <h2 class="text-5xl text-center font-bold underline underline-offset-1 decoration-4 decoration-yellow-400 mb-24">
         <%= awesome_projects %>
+      </h2>
       </p>
       <div id="works_list" class="grid grid-cols-2 gap-12 mx-24">
         <a
